logs/Slang/generated/keywords/5.6.2--keyword_const.sv.log
name: const
description: The 'const' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_const.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_const.sv:8:8: error: expected declarator
    bit const;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_const.sv:8:14: error: expected data type (implicit type name not allowed)
    bit const;
             ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_const.sv:8:14: error: expected declarator
    bit const;
             ^
